# LLMAnonymizationThesis

./: .gitignore  README.md  main.py  privacy_pipeline.py  pyproject.toml  running_config_eng.yml  running_congig_ukr.yml  streamlit_app.py  streamlit_try.py  temp_config.yml  test_app.py
data/: preprocessed_output.txt  preprocessed_output_uk.txt  task_description.txt  task_description_uk.txt  user_input.txt  user_input_uk.txt
dataset/: readme.md
dataset/dataset_english/: dadat_preparation.py  load_data_eng.ipynb  preprocess_spacy.py
dataset/dataset_english/data/: dev.spacy
dataset/dataset_ukr/: preprocess_spacy.py
dataset/dataset_ukr/data/: test.spacy  train.spacy
models/NER_models/other/DeBerta/: config.cfg  dataset.py  evaluate.py  extract_labels.py  model.py  prepare_dataset.py  preprocess_data.py  train.py  train_model.py  utils.py
models/NER_models/other/bert/: eval_on_pii43k.py  process_data.ipynb  process_data.py  test.py  train.ipynb  trainer.py
models/NER_models/spacy/english/: test_model.py
models/NER_models/spacy/spacy_test/: test_framework.py
models/NER_models/spacy/ukrainian/: test_model.py
processing/: differential_privacy.py  ner_processing.py  ollama_processor.py  pattern_processing.py  postprocessor.py  retriever.py
processing/rag_data/: file1.txt
providers/: llama_provider.py  openai_provider.py
tools/: ares_evaluation.py  ragas_evaluation.py
